fix [#31019] [Minor] Freshly added nodes aren't getting undo push

also noticed ED_undo_push was checking USER_GLOBALUNDO unnecessarily